# 2dPlatformer

./: Cargo.toml
assets/: map.ldtk  map1.ldtk  my_map.ldtk
src/: main.rs  player.rs  world.rs
