[package]
name = "knight_rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level=0

[profile.dev.package."*"]
opt-level=3
[dependencies]
bevy = "0.11.2"
bevy-parallax = "0.5.0"
bevy_asset_loader = "0.17.0"
bevy_ecs_ldtk = { version = "0.8.0", features = ["atlas"] }